fix test all pass