@@ -8,7 +8,7 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 public class PetriNetTest {
 
     private PetriNet petriNet;
-    private static int[] INITIAL_MARKING ={5, 1, 0, 0, 5, 0, 1, 1, 0, 0, 1, 0, 0, 0, 0};
+    private static final int[] INITIAL_MARKING ={5, 1, 0, 0, 5, 0, 1, 1, 0, 0, 1, 0, 0, 0, 0};
 
     @BeforeEach
     public void setUp() {
@@ -26,16 +26,18 @@ public class PetriNetTest {
     public void testInitialMarking() {
         assertArrayEquals(INITIAL_MARKING, petriNet.getMarking());
     }
+
     @Test
     public void testEnabledTransitions() {
         Transition expectedTransition = new Transition("T0");
-        assertEquals(expectedTransition.getName(), petriNet.getEnabledTransitions().get(0).getName());
+        assertEquals(expectedTransition.getName(), petriNet.getEnabledTransitions().getFirst().getName());
     }
 
     @Test
     public void testFailFireTransitions() {
-        petriNet.fireTransition(1);
-        assertArrayEquals(INITIAL_MARKING, petriNet.getMarking());
+        int[] actualMarking = petriNet.getMarking();
+        petriNet.fireTransition(10);
+        assertArrayEquals(actualMarking, petriNet.getMarking());
     }
 
     @Test
@@ -49,5 +51,6 @@ public class PetriNetTest {
         petriNet.fireTransition(1);
         assertArrayEquals(newMarking, petriNet.getMarking());
     }
+
 
 }
